# pure_eval

./: .gitignore  .travis.yml  MANIFEST.in  README.md  make_release.sh  pyproject.toml  setup.cfg  setup.py  test.py  tox.ini
.github/workflows/: pytest.yml
pure_eval/: __init__.py  core.py  my_getattr_static.py  utils.py
tests/: test_core.py  test_getattr_static.py  test_utils.py
