[metadata]
name = pure_eval
url = http://github.com/alexmojaki/pure_eval
author = Alex Hall
author_email = alex.mojaki@gmail.com
license = MIT
description = Safely evaluate AST nodes without side effects
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Intended Audience :: Developers
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = pure_eval
install_requires =
include_package_data = True
tests_require = pytest
setup_requires = setuptools>=44; setuptools_scm[toml]>=3.4.3

[options.extras_require]
tests = pytest

[options.package_data]
pure_eval = py.typed
